Map editor slightly changed. New cover implemented.

--- a/map_editor/index.html
+++ b/map_editor/index.html
@@ -20,7 +20,7 @@
 		</div>
 		<div id="settings">
 			<div>
-				<span id="extra"><input type="checkbox" id="show_extra" checked> 显示特殊点</span>
+				<span id="extra"><input type="checkbox" id="show_extra" checked><label for="show_extra"> 显示特殊点</label></span>
 				<span id="start">起点
 					<input type="number" id="start_x" min="2" max="157" value="2">
 					<input type="number" id="start_y" min="2" max="87" value="2">
