--- a/game/index.html
+++ b/game/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript" src="data/js/utils.js"></script>
 	<script type="text/javascript" src="data/js/easeljs-0.6.1.min.js"></script>
+	<script type="text/javascript" src="data/js/easeljs-0.6.1.box-blur-filter.js"></script>
 	<script type="text/javascript" src="data/js/soundjs-0.4.1.min.js"></script>
 	<script type="text/javascript" src="data/js/preloadjs-0.3.1.min.js"></script>
 	<script type="text/javascript" src="data/js/main.js"></script>
