Change logs confirmed.

--- a/game/change_logs.html
+++ b/game/change_logs.html
@@ -11,8 +11,8 @@
 		<li>完成OST原始版本</li>
 		<li>完成基本图像资源</li>
 		<li>实现地图编辑器</li>
-		<li>实现基本游戏系统</li>
-		<li>组建游戏雏形</li>
+		<li>实现游戏系统</li>
+		<li>构建游戏的全部关卡</li>
 	</ul>
 </body>
 </html>
