Revert "Re-arranged js files for size and i18n."
This reverts commit f92aacb03140f4008af4d4d97770702c17b79687.

--- a/game/index.html
+++ b/game/index.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<title>Tomorrow/明天 | LastLeaf</title>
+	<title>明天 | LastLeaf</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript" src="data/js/utils.js"></script>
-	<script type="text/javascript" src="data/js/createjs.js"></script>
+	<script type="text/javascript" src="data/js/easeljs-0.6.1.min.js"></script>
+	<script type="text/javascript" src="data/js/easeljs-0.6.1.box-blur-filter.js"></script>
+	<script type="text/javascript" src="data/js/soundjs-0.4.1.min.js"></script>
+	<script type="text/javascript" src="data/js/preloadjs-0.3.1.min.js"></script>
 	<script type="text/javascript" src="data/js/main.js"></script>
-	<script type="text/javascript" src="data/js/langs.js"></script>
 </head>
 <body>
 	<div id="wrapper"></div>
 	<div id="hint">
-		Please enable browser's JavaScript support, or use another browser to access this page...<br>
 		请开启浏览器的JavaScript支持，或使用其他浏览器访问本页面……
 	</div>
 	<script type="text/javascript">
-		document.getElementById('hint').innerHTML = 'Loading...<br>正在载入……';
+		document.getElementById('hint').innerHTML = '正在载入……';
 	</script>
 </body>
 </html>
