--- a/game/mobile.html
+++ b/game/mobile.html
@@ -5,7 +5,7 @@
 	<title>Tomorrow/明天 | LastLeaf</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript">
-		window.MOBILE = false;
+		window.MOBILE = true;
 	</script>
 	<script type="text/javascript" src="data/js/utils.js"></script>
 	<script type="text/javascript" src="data/js/createjs.js"></script>
@@ -14,6 +14,15 @@
 </head>
 <body>
 	<div id="wrapper"></div>
+	<div id="keys" style="display:none;">
+		<div class="key" id="key_up">↑</div>
+		<div class="key" id="key_left">←</div>
+		<div class="key" id="key_down">↓</div>
+		<div class="key" id="key_right">→</div>
+		<div class="key" id="key_enter">En</div>
+		<div class="key" id="key_pause">P</div>
+		<div class="key" id="key_space">○</div>
+	</div>
 	<div id="hint">
 		Please enable browser's JavaScript support, or use another browser to access this page...<br>
 		请开启浏览器的JavaScript支持，或使用其他浏览器访问本页面……
