Win32 version implemented.

--- a/game/change_logs.html
+++ b/game/change_logs.html
@@ -2,21 +2,17 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<title>版本变更记录 | 明天 | LastLeaf</title>
+	<title>Change Logs | Tomorrow | LastLeaf</title>
 </head>
-<body>
-	<h1>版本变更记录</h1>
-	<h2>0.2</h2>
+<body style="margin: 4em;">
+	<h1>Change Logs</h1>
+	<h2>1.0</h2>
 	<ul>
-		<li>国际化</li>
-	</ul>
-	<h2>0.1</h2>
-	<ul>
-		<li>完成OST原始版本</li>
-		<li>完成基本图像资源</li>
-		<li>实现地图编辑器</li>
-		<li>实现游戏系统</li>
-		<li>构建游戏的全部关卡</li>
+		<li>This is the inital version.</li>
 	</ul>
 </body>
+<script type="text/javascript">
+	if(location.search === '?showback')
+		document.body.innerHTML = '<p><a href="index.html">&lt;&lt;&lt; Return to the Game</a></p>' + document.body.innerHTML;
+</script>
 </html>
