Source code moved to /src.

--- a/src/change_logs.html
+++ b/src/change_logs.html
@@ -6,9 +6,9 @@
 </head>
 <body style="margin: 4em;">
 	<h1>Change Logs</h1>
-	<h2>1.0</h2>
+	<h2>1.0.0</h2>
 	<ul>
-		<li>This is the inital version.</li>
+		<li>This is the first stable version.</li>
 	</ul>
 </body>
 <script type="text/javascript">
