--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
 	<title>Tomorrow/明天 | LastLeaf</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript">
+		window.VERSION = '1.0.20130908';
 		window.MOBILE = false;
+		window.HIGH_QUALITY = true;
+		window.DEBUG = { SHOW_FPS: false };
 	</script>
 	<script type="text/javascript" src="data/js/utils.js"></script>
 	<script type="text/javascript" src="data/js/main.js"></script>
