--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 	</script>
 	<script type="text/javascript" src="data/js/utils.js"></script>
 	<script type="text/javascript" src="data/js/main.js"></script>
-	<script type="text/javascript" src="data/js/createjs.js"></script>
 	<script type="text/javascript" src="data/js/langs.js"></script>
+	<script type="text/javascript" src="data/js/createjs.min.js"></script>
 </head>
 <body>
 	<div id="wrapper"></div>
