--- a/src/kongregate_index.html
+++ b/src/kongregate_index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Tomorrow/明天 | LastLeaf</title>
+	<title>Tomorrow | LastLeaf</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript">
-		window.VERSION = '1.0.20130911';
+		window.VERSION = '1.0.20130908';
 		window.MOBILE = false;
 		window.HIGH_QUALITY = true;
-		window.PLATFORM = '';
+		window.PLATFORM = 'kongregate';
 		window.GAME_HOME_PAGE = { 'en':'../index.html', 'zh-CN':'../index_zh-CN.html' };
 		window.DEBUG = { SHOW_FPS: false };
 	</script>
@@ -20,11 +20,10 @@
 <body>
 	<div id="wrapper"></div>
 	<div id="hint">
-		Please enable browser's JavaScript support, or use another browser to access this page...<br>
-		请开启浏览器的JavaScript支持，或使用其他浏览器访问本页面……
+		Please enable browser's JavaScript support, or use another browser to access this page...
 	</div>
 	<script type="text/javascript">
-		document.getElementById('hint').innerHTML = 'Loading...<br>正在载入……';
+		document.getElementById('hint').innerHTML = 'Loading...';
 	</script>
 </body>
 </html>
