Republished with a share-alike license.

--- a/src/license_en.html
+++ b/src/license_en.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin: 4em;">
 	<h1>LICENSE</h1>
-	<p>The content of this game is available under <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 License</a>.</p>
+	<p>The content of this game is available under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International</a>.</p>
 	<p>The software of this game is available under <a href="http://www.opensource.org/licenses/mit-license.html">MIT License</a>.</p>
 </body>
 <script type="text/javascript">
