--- a/src/license_zh-CN.html
+++ b/src/license_zh-CN.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin: 4em;">
 	<h1>授权协议</h1>
-	<p>本游戏的游戏内容遵循 <a href="http://www.creativecommons.org/licenses/by-nc-nd/3.0/cn/deed.zh">Creative Commons 署名-非商业性使用-禁止演绎 3.0 中国大陆</a> 协议。</p>
+	<p>本游戏的游戏内容遵循 <a href="http://creativecommons.org/licenses/by-sa/4.0/">知识共享署名-相同方式共享 4.0 国际许可协议</a>。</p>
 	<p>本游戏的软件遵循 <a href="http://www.opensource.org/licenses/mit-license.html">MIT License</a> 。</p>
 </body>
 <script type="text/javascript">
