Added english script.

--- a/src/credit.html
+++ b/src/credit.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<title>Change Logs | Tomorrow | LastLeaf</title>
+	<title>CREDIT</title>
 </head>
 <body style="margin: 4em;">
+	<h1>CREDIT</h1>
+	<ul>
+		<li>Scripts / Chossy(English), LastLeaf(中文)</li>
+		<li>Illustration / tongtonggggg</li>
+		<li>Music / LastLeaf</li>
+		<li>Programming / jetzhliu, LastLeaf</li>
+	</ul>
 	<h1>Change Logs</h1>
 	<h2>1.0.0</h2>
 	<ul>
