--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Tomorrow/明天 | LastLeaf</title>
+	<title>A Lighted Story</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript">
 		window.VERSION = '1.0.20130911';
@@ -19,8 +19,7 @@
 <body>
 	<div id="wrapper"></div>
 	<div id="hint">
-		Please enable browser's JavaScript support, or use another browser to access this page...<br>
-		请开启浏览器的JavaScript支持，或使用其他浏览器访问本页面……
+		Please enable browser's JavaScript support, or use another browser to access this page...
 	</div>
 	<script type="text/javascript">
 		document.getElementById('hint').innerHTML = 'Loading...<br>正在载入……';
