Changed ending special effects.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 		Please enable browser's JavaScript support, or use another browser to access this page...
 	</div>
 	<script type="text/javascript">
-		document.getElementById('hint').innerHTML = 'Loading...<br>正在载入……';
+		document.getElementById('hint').innerHTML = 'Loading...';
 	</script>
 </body>
 </html>
