--- a/src/license_en.html
+++ b/src/license_en.html
@@ -2,12 +2,37 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<title>LICENSE | Tomorrow | LastLeaf</title>
+	<title>LICENSE</title>
 </head>
 <body style="margin: 4em;">
 	<h1>LICENSE</h1>
 	<p>The content of this game is available under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International</a>.</p>
 	<p>The software of this game is available under <a href="http://www.opensource.org/licenses/mit-license.html">MIT License</a>.</p>
+<pre>
+
+The MIT License (MIT)
+
+Copyright (c) 2013-2015 Fu Boquan (LastLeaf), Liu Zhanhong (jetzhliu)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
+</pre>
 </body>
 <script type="text/javascript">
 	if(location.search === '?showback')
