Embed Noto Serif font.

--- a/src/license_en.html
+++ b/src/license_en.html
@@ -33,6 +33,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 
 </pre>
+	<p>Google's <a href="https://www.google.com/get/noto">Noto Serif</a> font is under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a>.</p>
 </body>
 <script type="text/javascript">
 	if(location.search === '?showback')
