--- a/src/license_zh-CN.html
+++ b/src/license_zh-CN.html
@@ -33,6 +33,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 
 </pre>
+	<p>Google 的 <a href="https://www.google.com/get/noto">Noto Serif</a> 字体遵循 <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a> 。</p>
 </body>
 <script type="text/javascript">
 	if(location.search === '?showback')
