Fixed storage item id

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<title>A Lighted Story</title>
 	<link rel="stylesheet" type="text/css" href="data/css/main.css">
 	<script type="text/javascript">
-		window.VERSION = '1.0.20130911';
+		window.VERSION = '1.0.0';
 		window.MOBILE = false;
 		window.HIGH_QUALITY = true;
 		window.PLATFORM = '';
