Added stat to lastleaf.me

--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,25 @@
 	<script type="text/javascript">
 		document.getElementById('hint').innerHTML = 'Loading...';
 	</script>
+	<script type="text/javascript">
+		// stat to lastleaf.me
+		(function() {
+			var env = {};
+			env.u = document.location.href;
+			env.sw = screen.width;
+			env.sh = screen.height;
+			if(document.referrer && document.referrer != "") {
+				env.rf = document.referrer;
+			}
+			var params = [];
+			for(var key in env) {
+				if(env.hasOwnProperty(key)) {
+					params.push(encodeURIComponent(key) + "=" + encodeURIComponent(env[key]));
+				}
+			}
+			var img = new Image();
+			img.src = 'http://lastleaf.me/plugins/xsite_tracking/a.gif?' + params.join('&');
+		})();
+	</script>
 </body>
 </html>
